<resources>
    <string name="app_name">CalorieTracker</string>
    <string name="error_unknown">Erro desconhecido</string>
    <string name="welcome_text">Oi! Vamos saber mais sobre você :)</string>
    <string name="lets_go">Vamos!</string>
    <string name="whats_your_gender">Qual é o seu gênero biológico?</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="whats_your_age">Qual é a sua idade?</string>
    <string name="next">Próximo</string>
    <string name="whats_your_height">Qual é a sua altura?</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="error_age_cant_be_empty">A idade não pode ficar vazia</string>
    <string name="error_height_cant_be_empty">A altura não pode ficar vazia</string>
    <string name="error_weight_cant_be_empty">O peso não pode ficar vazio</string>
    <string name="kcal">kcal</string>
    <string name="carbs">Carb</string>
    <string name="protein">Prot</string>
    <string name="fat">Gord</string>
    <string name="previous_day">Dia anterior</string>
    <string name="next_day">Próximo dia</string>
    <string name="yesterday">Ontem</string>
    <string name="nutrient_info">%dg • %dkcal</string>
    <string name="amount_info">%dg</string>
    <string name="tomorrow">Amanhã</string>
    <string name="grams">g</string>
    <string name="extend">Expandir</string>
    <string name="collapse">Colapsr</string>
    <string name="breakfast">Café da manhã</string>
    <string name="lunch">Almoço</string>
    <string name="dinner">Jantar</string>
    <string name="add_meal">Adicionar %s</string>
    <string name="snacks">Lanches</string>
    <string name="add">Adicionar</string>
    <string name="search">Buscar...</string>
    <string name="today">Hoje</string>
    <string name="kcal_per_100g">%dkcal / 100g</string>
    <string name="recent">Recente</string>
    <string name="track">Adicionar</string>
    <string name="error_something_went_wrong">Opa, algo deu errado!</string>
    <string name="no_results">Sem resultados</string>
    <string name="error_invalid_values">Esses valores não são válidos</string>
    <string name="percent_proteins">% prot</string>
    <string name="percent_fats">% gord</string>
    <string name="percent_carbs">% carb</string>
    <string name="what_are_your_nutrient_goals">Quais são seus alvos nutricionais?</string>
    <string name="high">Alto</string>
    <string name="medium">Médio</string>
    <string name="years">anos</string>
    <string name="whats_your_weight">Qual o seu peso?</string>
    <string name="low">Baixo</string>
    <string name="gain">Ganhar</string>
    <string name="keep">Manter</string>
    <string name="lose">Perder</string>
    <string name="lose_keep_or_gain_weight">Você quer perder, manter ou ganhar peso?</string>
    <string name="whats_your_activity_level">Qual o seu nível de atividade?</string>
    <string name="error_not_100_percent">Os valores devem somar 100%</string>
    <string name="your_goal">Seu alvo:</string>
    <string name="delete">Deletar</string>
    <string name="amount">Quantidade</string>
</resources>