...
                )
                .background(MaterialTheme.colors.surface)
                .fillMaxWidth()
                .padding(dimensions.spaceMedium)
                .padding(end = dimensions.spaceMedium)
                .onFocusChanged { onFocusChanged(it) }
                .testTag("search_textfield")
        )
        if(shouldShowHint) {
            Text(
                text = hint,
                style = MaterialTheme.typography.body1,
                fontWeight = FontWeight.Light,
...
